tools/flowc/tests/errors/switch.flow
foo() {
	switch (a) {
		Foo(Bar(1)): 1;
	}
}